--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,38 +1,24 @@
-name: Python Syntax Code Quality Check Workflow
+name: Pylint
 
-on:
-  push:
-    branches:
-      - main
+on: [push]
 
 jobs:
-  pylint-check:
+  build:
     runs-on: ubuntu-latest
-
+    strategy:
+      matrix:
+        python-version: ["3.12"]
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v3
       with:
-        python-version: '3.12'
-
-    - name: Create virtual environment
-      run: python -m venv venv
-      working-directory: ${{ github.workspace }}
-
-    - name: Activate virtual environment and install dependencies
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
       run: |
-        source venv/bin/activate
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        deactivate
-      working-directory: ${{ github.workspace }}
-
-    - name: Analyze code with Pylint
+        pip install pylint
+    - name: Analysing the code with pylint
       run: |
-        source venv/bin/activate
         pylint $(git ls-files '*.py')
-        deactivate
-      working-directory: ${{ github.workspace }} 
