--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -27,11 +27,11 @@ repos:
   hooks:
   - id: isort
 
-- repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.5.1
-  hooks:
-  - id: ruff
-    types_or: [ python, pyi, jupyter ]
-    args: [ --fix ]
-  - id: ruff-format
-    types_or: [ python, pyi, jupyter ]
+# - repo: https://github.com/astral-sh/ruff-pre-commit
+#   rev: v0.5.1
+#   hooks:
+#   - id: ruff
+#     types_or: [ python, pyi, jupyter ]
+#     args: [ --fix ]
+#   - id: ruff-format
+#     types_or: [ python, pyi, jupyter ]
